--- a/demo.html
+++ b/demo.html
@@ -2,13 +2,37 @@
 <html>
 
 	<head>
-		<title>Page Title</title>
+		<title>Learning web</title>
 	</head>
 	
 	<body>
 		<h1>This is a Heading</h1>
 		<h1>This is a Heading</h1>
+		<hr>
 		<p>This is a paragraph.</p>
+		<img src="image.jpg" alt="this is image" width="104" height="142">
+		<button> Click me </button>	
+
+		<ul>
+			<li> image_1 </li>
+			<li> image_2 </li>
+			<li> image_3 </li>
+		</ul>
+
+		<ol>
+			<li> p_1 </li>
+			<li> p_2 </li>
+			<li> p_3 </li>			
+		</ol>	
+
+		<p> this is a <br> paragraph with a line break.</p>
+
+		<p style="color: red"> This is paragraph have red color. </p>
+		
+		<p title="asd">
+		this is content. </p>		
+		
+		<p title="About W3Schools"> this is a  </p>
 	</body>
 
-	</html>
+</html>
