--- a/demo.html
+++ b/demo.html
@@ -3,9 +3,10 @@
 
 	<head>
 		<title>Learning web</title>
+		<meta charset="UTF-8">
 	</head>
 	
-	<body>
+	<body style="background-color:powderblue;">
 		<h1>This is a Heading</h1>
 		<h1>This is a Heading</h1>
 		<hr>
@@ -13,7 +14,7 @@
 		<img src="image.jpg" alt="this is image" width="104" height="142">
 		<button> Click me </button>	
 
-		<ul>
+		<ul style="background-color:red;">
 			<li> image_1 </li>
 			<li> image_2 </li>
 			<li> image_3 </li>
@@ -31,8 +32,26 @@
 		
 		<p title="asd">
 		this is content. </p>		
-		
+		<hr>
 		<p title="About W3Schools"> this is a  </p>
+
+		<h1 style="font-size:100px;"> Heading 1</h1>
+		<hr>
+
+		<pre>
+			
+			<pre>
+				My Bonnie lies over the ocean.
+			</pre>
+  			My Bonnie lies over the sea.
+
+			My Bonnie lies over the ocean.
+
+			Oh, bring back my Bonnie to me.
+		</pre>
+
+		<strong> this text is strong</strong> <br>
+		<b> this text is bold</b>
 	</body>
 
 </html>
