--- a/demo.html
+++ b/demo.html
@@ -3,12 +3,30 @@
 
 	<head>
 		<title>Page Title</title>
+		<link rel="stylesheet" href="./my_format.css"/>
 	</head>
 	
 	<body>
+		<!-- <style>
+			p{
+				font-weight: bolder;
+				font-size: 20px;
+			}
+		</style> -->
+
 		<h1>This is a Heading</h1>
-		<h1>This is a Heading</h1>
-		<p>This is a paragraph.</p>
+		
+		<p id = "content_1">
+			People in many Asian countries worship Guanyin as a goddess of mercifulness and protection. However, the symbol of Guanyin in each country has some differences. She’s often described as a goddess in a white dress standing on a lotus in blossom holding a willow branch and a water jar. Sometimes Guanyin appears with a thousand eyes and thousand hands. Vietnamese people also worship Quan Âm Thị Kính, a tolerant goddess holding a child.
+			Read more at http://vietnamnews.vn/sunday/features/535415/goddess-worship-carries-spirit-of-mercy-and-tolerance.html#TLE1til6J36WYDz1.99
+		</p>
+		
+		<p id = "content_2">
+			No matter how she’s described, Guanyin and the belief of worshipping her have spread widely through Asia, carrying the ideas of mercy and tolerance, according to Prof Chung I Lin, vice principal of the National Cheng Kung University (Chinese Taipei).
+			Read more at http://vietnamnews.vn/sunday/features/535415/goddess-worship-carries-spirit-of-mercy-and-tolerance.html#TLE1til6J36WYDz1.99
+		</p>
+		
+
 	</body>
 
-	</html>
+</html>
