--- a/demo.html
+++ b/demo.html
@@ -15,16 +15,27 @@
 		</style> -->
 
 		<h1>This is a Heading</h1>
+		<div id = "div1">
+			<samp>
+				<p>
+					People in many Asian countries worship Guanyin as a goddess of mercifulness and protection. However, the symbol of Guanyin in each country has some differences. She’s often described as a goddess in a white dress standing on a lotus in blossom holding a willow branch and a water jar. Sometimes Guanyin appears with a thousand eyes and thousand hands. Vietnamese people also worship Quan Âm Thị Kính, a tolerant goddess holding a child.
+					Read more at http://vietnamnews.vn/sunday/features/535415/goddess-worship-carries-spirit-of-mercy-and-tolerance.html#TLE1til6J36WYDz1.99
+				</p>
+			</samp>
+
+			<p>
+				This is outsize tag samp.
+			</p>
+			
+		</div>
 		
-		<p id = "content_1">
-			People in many Asian countries worship Guanyin as a goddess of mercifulness and protection. However, the symbol of Guanyin in each country has some differences. She’s often described as a goddess in a white dress standing on a lotus in blossom holding a willow branch and a water jar. Sometimes Guanyin appears with a thousand eyes and thousand hands. Vietnamese people also worship Quan Âm Thị Kính, a tolerant goddess holding a child.
-			Read more at http://vietnamnews.vn/sunday/features/535415/goddess-worship-carries-spirit-of-mercy-and-tolerance.html#TLE1til6J36WYDz1.99
-		</p>
+		<div id = "content_2">
+			<p>
+				No matter how she’s described, Guanyin and the belief of worshipping her have spread widely through Asia, carrying the ideas of mercy and tolerance, according to Prof Chung I Lin, vice principal of the National Cheng Kung University (Chinese Taipei).
+				Read more at http://vietnamnews.vn/sunday/features/535415/goddess-worship-carries-spirit-of-mercy-and-tolerance.html#TLE1til6J36WYDz1.99
+			</p>
+		</div>
 		
-		<p id = "content_2">
-			No matter how she’s described, Guanyin and the belief of worshipping her have spread widely through Asia, carrying the ideas of mercy and tolerance, according to Prof Chung I Lin, vice principal of the National Cheng Kung University (Chinese Taipei).
-			Read more at http://vietnamnews.vn/sunday/features/535415/goddess-worship-carries-spirit-of-mercy-and-tolerance.html#TLE1til6J36WYDz1.99
-		</p>
 		
 
 	</body>
