--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>Page Title</title>
+		<title>My Website</title>
 		<link rel="stylesheet" href="./my_format.css"/>
 	</head>
 	
@@ -26,7 +26,7 @@
 			<p>
 				This is outsize tag samp.
 			</p>
-			
+
 		</div>
 		
 		<div id = "content_2">
