--- a/demo.html
+++ b/demo.html
@@ -1,96 +1,62 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-<<<<<<< HEAD
-		<title>Learning web</title>
-		<meta charset="UTF-8">
-	</head>
+<head>
+	<title>Learning web</title>
+	<meta charset="UTF-8">
+</head>
+
+<body style="background-color:darkgrey;">
+	<h1>This is a Heading</h1>
+	<hr>
+	<p>This is a paragraph.</p>
+	<img src="image.jpg" alt="this is image" width="104" height="142">
+	<button> Click me </button>
+	<ol >
+		<li> p_1 </li>
+		<li> p_2 </li>
+		<li> p_3 </li>
+	</ol>
+<!-- -------------------------------------------------------------------- -->
+	<table border="2" cellpadding="5" cellspacing="10" >
+		<tr>  
+			<td>[Row 1 - column 1]</td>
+			<td>[Row 1 - column 2]</td>
+			<td>[Row 1 - column 3]</td>
+		</tr>
+
+		<tr> 
+			<td>[Row 2 - column 1]</td>
+			<td>[Row 2 - column 2]</td>
+			<td>[Row 2 - column 3]</td>
+		</tr>
 	
-	<body style="background-color:powderblue;">
-		<h1>This is a Heading</h1>
-		<h1>This is a Heading</h1>
-		<hr>
-		<p>This is a paragraph.</p>
-		<img src="image.jpg" alt="this is image" width="104" height="142">
-		<button> Click me </button>	
+	</table>
+	<br />
 
-		<ul style="background-color:red;">
-			<li> image_1 </li>
-			<li> image_2 </li>
-			<li> image_3 </li>
-		</ul>
+<!-- -------------------------------------------------------------------- -->
+	<video controls="controls">
+		<source src="video.mp4" type="video/mp4" />
+	</video>
 
-		<ol>
-			<li> p_1 </li>
-			<li> p_2 </li>
-			<li> p_3 </li>			
-		</ol>	
-
-		<p> this is a <br> paragraph with a line break.</p>
-
-		<p style="color: red"> This is paragraph have red color. </p>
-		
-		<p title="asd">
-		this is content. </p>		
-		<hr>
-		<p title="About W3Schools"> this is a  </p>
-
-		<h1 style="font-size:100px;"> Heading 1</h1>
-		<hr>
-
-		<pre>
-			
-			<pre>
-				My Bonnie lies over the ocean.
-			</pre>
-  			My Bonnie lies over the sea.
-
-			My Bonnie lies over the ocean.
-
-			Oh, bring back my Bonnie to me.
-		</pre>
-
-		<strong> this text is strong</strong> <br>
-		<b> this text is bold</b>
-=======
-		<title>My Website</title>
-		<link rel="stylesheet" href="./my_format.css"/>
-	</head>
+<!-- -------------------------------------------------------------------- -->
+	<audio controls="controls">
+		<source src="audio.mp3" type="audio/mpeg">
+	</audio>
+	<br /> 
+<!-- -------------------------------------------------------------------- -->
+	<input type="text" /> <br /> 
+	<input type="checkbox" /> <br /> 
+	<input type="radio" />	<br /> 
+	<input type="file" /> <br /> 
+	<select >
+		<option>1</option>
+		<option>2</option>
+		<option>3</option>
+	</select> <br />
+	<textarea cols="30" rows="10"></textarea> <br />
+	<iframe src="./image.jpg" width="20%" height="40%" frameborder="10"></iframe> <br />
 	
-	<body>
-		<!-- <style>
-			p{
-				font-weight: bolder;
-				font-size: 20px;
-			}
-		</style> -->
-
-		<h1>This is a Heading</h1>
-		<div id = "div1">
-			<samp>
-				<p>
-					People in many Asian countries worship Guanyin as a goddess of mercifulness and protection. However, the symbol of Guanyin in each country has some differences. She’s often described as a goddess in a white dress standing on a lotus in blossom holding a willow branch and a water jar. Sometimes Guanyin appears with a thousand eyes and thousand hands. Vietnamese people also worship Quan Âm Thị Kính, a tolerant goddess holding a child.
-					Read more at http://vietnamnews.vn/sunday/features/535415/goddess-worship-carries-spirit-of-mercy-and-tolerance.html#TLE1til6J36WYDz1.99
-				</p>
-			</samp>
-
-			<p>
-				This is outsize tag samp.
-			</p>
-
-		</div>
-		
-		<div id = "content_2">
-			<p>
-				No matter how she’s described, Guanyin and the belief of worshipping her have spread widely through Asia, carrying the ideas of mercy and tolerance, according to Prof Chung I Lin, vice principal of the National Cheng Kung University (Chinese Taipei).
-				Read more at http://vietnamnews.vn/sunday/features/535415/goddess-worship-carries-spirit-of-mercy-and-tolerance.html#TLE1til6J36WYDz1.99
-			</p>
-		</div>
-		
-		
-
->>>>>>> 2d3e6e95a0a61286a1a21e15f46bf412215ce946
-	</body>
+</body>
 
 </html>
